Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63208

QtWaylandCompositor Crash on Focus Change

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.3, 5.10
    • 5.9.1, 5.9.2, 5.10.0 Alpha
    • QPA: Wayland
    • None

      We are getting a reproduceable crash with the following setup and procedure:

      • QtWayland based compositor
      • Example application with several windows

      The example application provides a window to the compositor. This window contains a "close" button, which triggers the destruction of the window. On touch event on that button, the QWindow object is destroyed and the surface correctly removed from the compositor.

      When performing another touch that changes the focus to another window, we get the crash as given in the attached backtrace (thread 1, invalid access to surface resource in compositor_api/qwaylandview.cpp:379).

        For Gerrit Dashboard: QTBUG-63208
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            cordlandwehr Andreas Cord-Landwehr
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes