Fix crash after destroying view with mouse focus

Don't emit QWaylandSeat::mouseFocusChanged with a destroyed QWaylandView.

QWaylandPointer has been refactored to make it easier to follow enter and
leave logic. A missing emit for buttonPressedChanged has been fixed as well.

This also adds a test for pointer events to verify that setting mouse focus
works and that the crash has been fixed.

Task-number: QTBUG-63208
Change-Id: Id0c174a7b609dfd0152f3ae446dd51fd8befd554
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>